<resources>
    <string name="app_name">Штаб КР по COVID-19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    //----------------------------------------------
    //крыша
    <string name="head_dead">Штаб КР по COVID-19</string>
    <string name="head_lang_kg">KG</string>
    <string name="head_lang_eng">ENG</string>
    <string name="head_lang_ru">RU</string>

    <string-array name="head_lang">
        <item>KG</item>
        <item>ENG</item>
        <item>RU</item>
    </string-array>

    <string-array name="gender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    //заражены
    <string name="status_kg_info">Данные по Кыргызстану в режиме онлайн</string>
    <string name="status_infected">Заражены:</string>
    <string name="status_recovered">Выздоровели:</string>
    <string name="status_dead">Умерли:</string>

    //menu 2
    <string name="menu_news">Новости КР</string>
    <string name="menu_map_help">Карта с пунктами помощи</string>
    <string name="menu_tips_voz">Советы по гигиене и рекомендации ВОЗ</string>
    <string name="menu_quations_covid19">Вопросы про вирус COVID19</string>
    <string name="menu_quarantine">Карантин</string>
    <string name="menu_fake">Фейки</string>
    <string name="menu_contact">Контакты</string>

    //----------------------------------------------
    //news

    <string name="news_name">Новости</string>

    //----------------------------------------------

    //map
    <string name="map_name">Карта с пунктами помощи</string>
    <string name="map_city">Ваш город</string>

    //map - города
    <string name="map_city_bishkek">Бишкек</string>
    <string name="map_city_osh">Ош</string>
    <string name="map_city_djalal_abad">Джалал-Абад</string>

    //map - bishkek
    <string name="map_address_bishkek">г.Бишкек, ​Тоголок Молдо, 1/13</string>
    <string name="map_bishkek_telephone_bishkek">0312 00 00 00</string>
    <string name="map_bishkek_site_bishkek">gov.covid19.kg</string>

    //map - osh
    <string name="map_address_osh">г.Бишкек, ​Тоголок Молдо, 1/13</string>
    <string name="map_telephone_osh">0312 00 00 00</string>
    <string name="map_site_osh">gov.covid19.kg</string>

    //----------------------------------------------
    //tips
    <string name="tips_name">Советы по гигиене и рекомендации ВОЗ</string>


    //----------------------------------------------
    //quations
    <string name="quations_name">Вопросы про вирус COVID19</string>
    <string name="quations_text">Здесь собраны часто задаваемы вопросы по вирусу помимо этого вы
        можете пройти тест на наличие признаков COVID19</string>

    <string name="quations_test">Пройти тест</string>

    //----------------------------------------------
    //test
    <string name="test_name">Тест на наличие синдромов</string>
    <string name="test_quations_yes">Да</string>
    <string name="test_quations_no">Нет</string>


    //----------------------------------------------
    //test-profile
    <string name="test_profile_name">Имя</string>
    <string name="test_profile_last_name">Фамилия</string>
    <string name="test_profile_state">Область</string>
    <string name="test_profile_city">Город</string>
    <string name="test_profile_area">Район</string>
    <string name="test_profile_age">Возраст</string>
    <string name="test_profile_send">Отправить</string>


    //----------------------------------------------
    //quarantine
    <string name="quarantine_name">Как организовать карантин дома</string>


    //----------------------------------------------
    //fake
    <string name="fake_name">Фейки</string>
    <string name="fake_label">
        Внимание в данном разделе вы можете проверить информацию о фейках
    </string>


    //----------------------------------------------
    //contact
    <string name="contact_name">Контакты штаба </string>
    <string name="current_lang">RU</string>
    <string name="menu_home">домой</string>
    <string name="stat_label">Данные по Кыргызстану в режиме онлайн</string>
    <string name="infected">Заражены</string>
    <string name="recovered">Выздоровели</string>

    <string name="contacts">Телефоны Сall-центра Минэкономики КР для предпринимателей: \n
        📍 +996 312 620319; \n
        📍 Whats app 0555774405.\n
        ✉️ Также параллельно по электронному адресу: info@mineconom.gov.kg,\n
        можно направить вопросы в письменном виде.\n
        -------------------------------------\n
        🇰🇬 COVID-19:\n
        ☎️ Ишкерлер үчүн үчүн КРдин Экономика министрлигинин Сall-борборунун телефондору:\n
        📍 +996 312 620319;\n
        📍 Whats Аpp 0555774405.</string>

    <string name="contacts_title">Телефоны Сall-центра Минэкономики КР для предпринимателей:</string>
    <string name="contacts_phone">+996 312 620319</string>
    <string name="contacts_whatsapp">Whats Аpp 0555774405</string>
    <string name="contacts_email">Также параллельно по электронному адресу: info@mineconom.gov.kg,\n
        можно направить вопросы в письменном виде</string>

    <string name="contacts_email_ky">Ошондой эле электрондук дарекке:
info@mineconom.gov.kg, \n
 суроолорду жазуу түрүндө жөнөтө аласыз.</string>


    <string name="contacts_title_ky">Ишкерлер үчүн үчүн КРдин Экономика министрлигинин Сall-борборунун телефондору:</string>

    <string name="of"> из </string>
    <string name="test_positive">Заполните анкету о себе</string>
    <string name="test_positive_second">В случае потверждения у вас всех признаков covid 19 просим вас запонить анкету</string>
    <string name="google_maps">Открыть в Google Maps</string>
    <string name="net_problem">Проблемы с связью попробуйте обновить страницу позже</string>
    <string name="back">назад</string>
    <string name="stations_not_found_text">Мы не нашли пукты по указанному городу</string>
    <string name="quarantine_body">Равным образом укрепление и развитие структуры позволяет оценить значение модели развития. С другой стороны дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.</string>
    <string name="quarantine_title">Шаг 1</string>
    <string name="toast_results_send">результаты отправлены</string>
    <string name="toast_error">ошибка</string>
    <string name="toast_test_ok">ответ принят</string>
    <string name="choose_city">Выберите город</string>
    <string name="choose_region">С начало выберите область</string>
</resources>
