<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/house"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/menu_map_help"
            android:icon="@drawable/house"
            android:title="@string/menu_map_help" />
        <item
            android:id="@+id/menu_tips_voz"
            android:icon="@drawable/house"
            android:title="@string/menu_tips_voz" />
        <item
            android:id="@+id/menu_quations_covid19"
            android:icon="@drawable/house"
            android:title="@string/menu_quations_covid19" />
        <item
            android:id="@+id/menu_quarantine"
            android:icon="@drawable/house"
            android:title="@string/menu_quarantine" />
        <item
            android:id="@+id/menu_fake"
            android:icon="@drawable/house"
            android:title="@string/menu_fake" />
        <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/house"
            android:title="@string/menu_contact" />
    </group>
</menu>
