<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_news">

    <fragment
        android:id="@+id/menu_news"
        android:name="kg.koronastaff.staffapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news">
    </fragment>

    <fragment
        android:id="@+id/menu_map_help"
        android:name="kg.koronastaff.staffapp.ui.map.MapFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_map">
    </fragment>

    <fragment
        android:id="@+id/menu_tips_voz"
        android:name="kg.koronastaff.staffapp.ui.tips.TipsFragment"
        android:label="@string/menu_tips_voz"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/menu_quations_covid19"
        android:name="kg.koronastaff.staffapp.ui.faq.FAQFragment"
        android:label="@string/menu_quations_covid19"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/menu_quarantine"
        android:name="kg.koronastaff.staffapp.ui.quarantine.QuarantineFragment"
        android:label="@string/menu_quarantine"
        tools:layout="@layout/fragment_quarantine" />


    <fragment
        android:id="@+id/menu_fake"
        android:name="kg.koronastaff.staffapp.ui.fakenews.FakenewsFragment"
        android:label="@string/menu_fake"
        tools:layout="@layout/fragment_fakenews" />

    <fragment
        android:id="@+id/menu_contact"
        android:name="kg.koronastaff.staffapp.ui.contacts.Contacts"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_cotacts" />

</navigation>