<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
       style="@style/contacts_linear"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        style="@style/contacts_title"
        android:text="@string/contacts_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/call"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            tools:ignore="RtlSymmetry,VectorDrawableCompat"
            app:srcCompat="@drawable/phone"
            style="@style/contacts_imageView" />
        <TextView
            style="@style/contacts_text2"
            android:text="@string/contacts_phone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/whatsapp"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call">

        <ImageView
            style="@style/contacts_imageView"
            app:srcCompat="@drawable/iconwhatsap"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            style="@style/contacts_text2"
            android:text="@string/contacts_whatsapp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp">

        <ImageView
            app:srcCompat="@drawable/ic_email_black_24dp"
            tools:ignore="VectorDrawableCompat"
            style="@style/contacts_imageView"/>

        <TextView
            android:id="@+id/textView5"
            style="@style/contacts_text2"
            android:text="@string/contacts_email" />
    </LinearLayout>

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@+id/title_ky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/title_ky"
        style="@style/contacts_title"
        android:text="@string/contacts_title_ky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seperator" />

    <LinearLayout
        android:id="@+id/call_ky"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_ky">

        <ImageView
            tools:ignore="VectorDrawableCompat"
            app:srcCompat="@drawable/phone"
            style="@style/contacts_imageView" />

        <TextView
            style="@style/contacts_text2"
            android:text="@string/contacts_phone" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/whatsapp_ky"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_ky">

        <ImageView
            style="@style/contacts_imageView"
            app:srcCompat="@drawable/iconwhatsap"
            tools:ignore="VectorDrawableCompat"/>

        <TextView
            style="@style/contacts_text2"
            android:text="@string/contacts_whatsapp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_ky"
        style="@style/contacts_linear"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp_ky">

        <ImageView
            style="@style/contacts_imageView"
            app:srcCompat="@drawable/ic_email_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            style="@style/contacts_text2"
            android:text="@string/contacts_email_ky" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>