<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.faq.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/stat_item"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="75dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/faq_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/quations_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/faq_second_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/quations_text"
                    app:layout_constraintTop_toBottomOf="@+id/faq_label"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/go_to_test_action"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/quations_test"
                    android:background="@color/white"
                    android:paddingEnd="40dp"
                    android:paddingStart="40dp"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/faq_second_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/faq_news_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/go_to_test_action"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>