<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".ui.tests.TestsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/grey_background"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/test_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="1 of 1"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.cardview.widget.CardView
                android:id="@+id/questionare_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                card_view:cardCornerRadius="15dp"
                tools:layout_editor_absoluteX="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="tests question?"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="10dp" />

                    <TextView
                        android:id="@+id/test_additional_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="tests question?"
                        android:textSize="13sp"
                        tools:layout_editor_absoluteX="10dp" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/test_form"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:visibility="gone"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/test_name"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            app:layout_constraintEnd_toStartOf="@+id/test_surname"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintStart_toStartOf="parent"
                            android:hint="@string/test_profile_name"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/test_surname"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintStart_toEndOf="@+id/test_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:hint="@string/test_profile_last_name"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/test_region"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints="@string/test_profile_state"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/test_name" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/dark_grey"
                            app:layout_constraintTop_toBottomOf="@id/test_region" />
                        <Spinner
                            android:id="@+id/test_city"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/test_region" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/dark_grey"
                            android:layout_margin="5dp"
                            app:layout_constraintTop_toBottomOf="@id/test_city" />
                        <Spinner
                            android:id="@+id/test_district"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/test_city" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/dark_grey"
                            android:layout_margin="5dp"
                            app:layout_constraintTop_toBottomOf="@id/test_district" />
                        <Spinner
                            android:id="@+id/test_gender"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/test_district" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/dark_grey"
                            android:layout_margin="5dp"
                            app:layout_constraintTop_toBottomOf="@id/test_gender" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:inputType="number"
                            android:hint="@string/test_profile_age"
                            app:layout_constraintTop_toBottomOf="@id/test_gender"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="parent">

                        <Button
                            android:id="@+id/test_button_yes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_bordered_background"
                            android:text="@string/test_quations_yes" />

                        <Button
                            android:id="@+id/test_button_no"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@color/dark_grey"
                            android:text="@string/test_quations_no"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@+id/questionare_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>