<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/statistic_online"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:maxHeight="65dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="12sp"
        android:text="@string/stat_label"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="9dp"

        app:layout_constraintTop_toBottomOf="@+id/textView">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_virus"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_virus" />

            <TextView
                android:id="@+id/infected_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/image_virus"
                android:layout_toRightOf="@+id/image_virus"
                android:text="@string/status_infected" />

            <TextView
                android:id="@+id/infected_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="-2dp"
                android:fontFamily="sans-serif-light"
                android:layout_toEndOf="@+id/infected_label"
                android:layout_toRightOf="@+id/image_virus"
                android:text="0" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_recovered"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/recovered_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/image_recovered"
                android:layout_toRightOf="@+id/image_recovered"
                android:text="@string/status_recovered" />

            <TextView
                android:id="@+id/recovered_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="-2dp"
                android:fontFamily="sans-serif-light"
                android:layout_toEndOf="@+id/recovered_label"
                android:layout_toRightOf="@+id/recovered_label"
                android:text="0" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/dead_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/dead"/>

            <TextView
                android:id="@+id/dead_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/dead_image"
                android:layout_toRightOf="@+id/dead_image"
                android:text="@string/status_dead" />

            <TextView
                android:id="@+id/dead_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="-2dp"
                android:fontFamily="sans-serif-light"
                android:layout_toEndOf="@+id/dead_label"
                android:layout_toRightOf="@+id/dead_label"
                android:text="0" />
        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>